added meta description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using the Shuffle Editor"
+      content="Remat Plus Alba. Firma de reciclare a deșeurilor feroase și neferoase, al echipamentelor electrice și electronice, precum și a deșeurilor din carton, hârtie și plastic."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
